--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -9,7 +9,14 @@
 	"compatibility_date": "2025-05-09",
 	"observability": {
 		"enabled": true
-	}
+	},
+	"r2_buckets": [
+		{
+			"binding": "toolhouseRAGbucket",
+			"bucket_name": "rag",
+			"preview_bucket_name": "rag-preview"
+		}
+	]
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
