--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
 		"typescript": "^5.5.2",
 		"vitest": "~3.0.7",
 		"wrangler": "^4.14.4"
+	},
+	"dependencies": {
+		"chanfana": "^2.8.0",
+		"hono": "^4.7.9",
+		"jose": "^6.0.11",
+		"zod": "^3.24.4"
 	}
 }
