feat: add preview URLs and custom routing configuration for rag.toolhouse.ai in wrangler.jsonc

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -10,6 +10,13 @@
 	"observability": {
 		"enabled": true
 	},
+	"preview_urls": true,
+	"routes": [
+		{
+			"pattern": "rag.toolhouse.ai",
+			"custom_domain": true
+		}
+	],
 	"r2_buckets": [
 		{
 			"binding": "toolhouseRAGbucket",
