fix: update routing pattern in wrangler.jsonc to use the correct API subdomain

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -13,7 +13,7 @@
 	"preview_urls": true,
 	"routes": [
 		{
-			"pattern": "rag.toolhouse.ai",
+			"pattern": "rag-api.toolhouse.ai",
 			"custom_domain": true
 		}
 	],
