feat: add delete folder and related files

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"deploy": "wrangler deploy",
 		"dev": "wrangler dev",
 		"start": "wrangler dev",
+		"local": "wrangler dev --port 8780",
 		"test": "vitest",
 		"cf-typegen": "wrangler types",
 		"local": "wrangler dev --port 8780"
