feat: add toolhouse rag tool

--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
 		"dev": "wrangler dev",
 		"start": "wrangler dev",
 		"test": "vitest",
-		"cf-typegen": "wrangler types"
+		"cf-typegen": "wrangler types",
+		"local": "wrangler dev --port 8780"
 	},
 	"devDependencies": {
 		"@cloudflare/vitest-pool-workers": "^0.8.19",
 		"@cloudflare/workers-types": "^4.20250509.0",
+		"@types/node": "^22.15.18",
 		"typescript": "^5.5.2",
 		"vitest": "~3.0.7",
 		"wrangler": "^4.14.4"
 	},
 	"dependencies": {
+		"@google/genai": "^0.14.0",
 		"chanfana": "^2.8.0",
 		"hono": "^4.7.9",
 		"jose": "^6.0.11",
