--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -7,6 +7,7 @@
 	"name": "toolhouse-r2-worker",
 	"main": "src/index.ts",
 	"compatibility_date": "2025-05-09",
+	"compatibility_flags": ["nodejs_compat"],
 	"observability": {
 		"enabled": true
 	},
@@ -42,7 +43,9 @@
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
 	 */
 	"vars": {
-		"TOOLHOUSE_API_URL": "https://api.toolhouse.ai/v1"
+		"TOOLHOUSE_API_URL": "https://api.toolhouse.ai/v1",
+		"GEMINI_API_KEY": "",
+		"GEMINI_MODEL": "gemini-2.0-flash"
 	}
 	/**
 	 * Note: Use secrets to store sensitive data.
