--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -45,7 +45,7 @@
 	"vars": {
 		"TOOLHOUSE_API_URL": "https://api.toolhouse.ai/v1",
 		"GEMINI_API_KEY": "",
-		"GEMINI_MODEL": "gemini-2.0-flash"
+		"GEMINI_MODEL": "gemini-2.5-flash-preview-04-17"
 	}
 	/**
 	 * Note: Use secrets to store sensitive data.
