--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"start": "wrangler dev",
 		"test": "vitest",
 		"cf-typegen": "wrangler types",
-		"local": "wrangler dev --port 8780"
+		"local": "wrangler dev --port 8780 --inspector-port 9231"
 	},
 	"devDependencies": {
 		"@cloudflare/vitest-pool-workers": "^0.8.19",
